# snowflake-to-slack

./: .gitignore  .python-version  CHANGELOG  Dockerfile  LICENSE  PUBLISH.md  README.md  action.yml  generate-slack-token.md  mutmut_config.py  setup.cfg  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
snowflake_to_slack/: cli.py  message.py  snowflake.py
tests/: fake_rsa_key.p8  test_cli.py  test_message.py  test_version.py
tests/test_templates/: simple.j2
