[metadata]
name = snowflake_to_slack
version = 0.1.1
description = Send Slack messages spiced with data from Snowflake.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/offbi/snowflake-to-slack
author = Radek Tomšej
author_email = radek@tomsej.cz
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    Jinja2==2.11.3
    click==7.1.2
    slack-sdk==3.4.2
    snowflake-connector-python==2.4.2
python_requires = >=3.7.1

[options.entry_points]
console_scripts =
    snowflake-to-slack = snowflake_to_slack.cli:snowflake_to_slack

[bdist_wheel]
universal = 1

[options.packages.find]
exclude = tests*

[tool:pytest]
testpaths = tests
addopts = -vvv --cov=snowflake_to_slack --cov-config=setup.cfg --cov-report=term-missing --cov-report=html

[coverage:run]
branch = True
source = .
omit =
    */.tox/*
    */__main__.py
    */setup.py
    */venv*/*
    tests/*

[coverage:report]
fail_under = 100
show_missing = True
skip_covered = True
skip_empty = True
exclude_lines =
    pragma: no cover

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_no_return = false

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
ignore = BLK100,E231,W503
statistics = 1
max-line-length = 88

[mutmut]
runner = python -m pytest -x
tests_dir = tests/unit
